[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"
description = "Local search engine written in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.8", features = ["derive"] }
rust-stemmers = "1.2.0"
scraper = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tiny_http = "0.12.0"
